# app_update_bsdiff

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bs.h  bsdiff.c  com_derek_appupdatebsdiff_utils_BsPatch.h  native-lib.c
app/src/main/cpp/bzip2/: CMakeLists.txt
app/src/main/java/com/derek/appupdatebsdiff/: MainActivity.java
app/src/main/java/com/derek/appupdatebsdiff/utils/: ApkUtils.java  BsPatch.java  Constants.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
